--- a/cpuUsage.service
+++ b/cpuUsage.service
@@ -2,7 +2,7 @@
 Description=CPU usage report
 
 [Service]
-ExecStart=/usr/bin/python3 /home/paramont/CPU_usage/cpuUsage.py
+ExecStart=/usr/bin/python3 /etc/systemd/system/cpuUsage.service
 Restart=always
 
 [Install]
